--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-AGR meu site ficou assim
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -239,20 +238,19 @@ h2 { text-align: center; color: #0a7cff; }
 </div>
 
 <div class="abas">
-  <button class="ativa" onclick="mostrarCategoria('banheiro',this)">Banheiro</button>
   <button onclick="mostrarCategoria('limpeza',this)">Produtos de Limpeza</button>
   <button onclick="mostrarCategoria('casa',this)">Casa</button>
   <button onclick="mostrarCategoria('automotivo',this)">Automotivo</button>
+  <button onclick="mostrarCategoria('banheiro',this)">Banheiro</button>
   <button onclick="mostrarCategoria('essencias',this)">Essências</button>
 </div>
 
 <div class="container">
+  
 
-<!-- PRODUTOS DE LIMPEZA -->
-<div id="limpeza" class="categoria">
-<h2>Produtos de Limpeza</h2>
+<div id="banheiro" class="categoria ativa">
+<h2>Banheiro</h2>
 <div class="produtos">
- 
 <!-- produtos limpeza -->
  <div class="produto">
 <img src="img/sabonete-liquido-dove.jpg">
