--- a/index.html
+++ b/index.html
@@ -493,24 +493,24 @@ body {
   transform: scale(0.95);
 }
 
-  /* TOTAL FLUTUANTE */
-#totalFlutuante {
+  #totalFlutuante {
   position: fixed;
-  bottom: 20px;
+  top: 70px;          /* fica abaixo do botão carrinho */
   right: 20px;
   background: linear-gradient(180deg, #25d366, #1ebe5d);
   color: #fff;
-  padding: 12px 16px;
-  border-radius: 16px;
+  padding: 10px 14px;
+  border-radius: 14px;
   display: none;
   flex-direction: column;
-  gap: 4px;
-  font-size: 14px;
+  gap: 2px;
+  font-size: 13px;
   font-weight: bold;
   cursor: pointer;
-  box-shadow: 0 8px 20px rgba(0,0,0,.3);
+  box-shadow: 0 6px 16px rgba(0,0,0,.3);
   z-index: 3000;
 }
+
 
   /* ANIMAÇÃO DO TOTAL QUANDO MUDA */
 #totalFlutuante.animar {
@@ -526,6 +526,13 @@ body {
   }
   100% {
     transform: scale(1);
+  }
+}
+
+  @media (max-width: 600px) {
+  #totalFlutuante {
+    top: 75px;
+    right: 14px;
   }
 }
 
