--- a/index.html
+++ b/index.html
@@ -853,6 +853,21 @@ mark {
   </div>
 </div>
 </div>
+
+<div class="produto">
+<img src="img/candida-azul.jpg">
+<h3>Cândida Colorida Azul</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span>2L — R$ 9,00</span>
+    <button onclick="addProduto('Cândidad Colorida Azul 2L',9)">Adicionar</button>
+  </div>
+  <div class="linha">
+    <span>5L — R$ 20,00</span>
+    <button onclick="addProduto('Cândida Colorida Azul 5L',20)">Adicionar</button>
+  </div>
+</div>
+</div>
   
  <div class="produto">
 <img src="img/sabao-liquido-bonrruque.jpg">
