--- a/index.html
+++ b/index.html
@@ -1537,43 +1537,7 @@ mark {
 </div>
 </div>
   
-<div class="categoria" id="essencias">
-  <h2>Essências</h2>
 
-  <div class="produtos">
-
-    <div class="produto">
-      <img src="img/essencia-lavanda.jpg">
-      <h3>Essência Lavanda</h3>
-      <div class="variacoes">
-        <div class="linha">
-          <span>Senalândia — R$ 15,00</span>
-          <button onclick="addProduto('Essência Lavanda Senalândia',15)">Adicionar</button>
-        </div>
-        <div class="linha">
-          <span>Senamax — R$ 18,00</span>
-          <button onclick="addProduto('Essência Lavanda Senamax',18)">Adicionar</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="produto">
-      <img src="img/essencia-eucalipto.jpg">
-      <h3>Essência Eucalipto</h3>
-      <div class="variacoes">
-        <div class="linha">
-          <span>Senalândia — R$ 15,00</span>
-          <button onclick="addProduto('Essência Eucalipto Senalândia',15)">Adicionar</button>
-        </div>
-        <div class="linha">
-          <span>Senamax — R$ 18,00</span>
-          <button onclick="addProduto('Essência Eucalipto Senamax',18)">Adicionar</button>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div>
  
  <div id="automotivo" class="categoria">
 <h2>Automotivo</h2>
@@ -1584,7 +1548,59 @@ mark {
 <h3>Shampoo Automotivo</h3>
 <div class="variacoes">
   <div class="linha">
-    <span>1L — R$ 13,00</span>
+    <span>1L — R$ 13,00</spa        </div>
+         <div class="linha">
+          <span> Lavanda — R$ 22,00</span>
+          <button onclick="addProduto('Lavanda',22)">Adicionar</button>
+        </div>
+      </div>
+    </div>
+
+<div class="produto">
+      <img src="img/difusor-senalar.jpg">
+      <h3>Difusor SenaLar 250ML</h3>
+      <div class="variacoes">
+        <div class="linha">
+          <span> Orquídea — R$ 15,00</span>
+          <button onclick="addProduto('Orquídea',15)">Adicionar</button>
+        </div>
+        <div class="linha">
+          <span> Chá Branco — R$ 15,00</span>
+          <button onclick="addProduto('Chá Branco',15)">Adicionar</button>
+        </div>
+         <div class="linha">
+          <span> Bambu — R$ 15,00</span>
+          <button onclick="addProduto('Bambu',15)">Adicionar</button>
+      </div>
+         <div class="linha">
+          <span> Lavanda — R$ 15,00</span>
+          <button onclick="addProduto('Lavanda',15)">Adicionar</button>
+        </div>
+      </div>
+    </div>
+
+<div class="produto">
+      <img src="img/agua-tecido.jpg">
+      <h3>Água para Tecidos 500ML</h3>
+      <div class="variacoes">
+        <div class="linha">
+          <span> Bambu — R$ 23,00</span>
+          <button onclick="addProduto('Bambu',23)">Adicionar</button>
+        </div>
+        <div class="linha">
+          <span> Chá Branco — R$ 23,00</span>
+          <button onclick="addProduto('Chá Branco',23)">Adicionar</button>
+        </div>
+        <div class="linha">
+          <span> Flores de Algodão — R$ 23,00</span>
+          <button onclick="addProduto('Flores de Algodão',23)">Adicionar</button>
+        </div>
+      </div>
+    </div>
+    
+  </div>
+ </div>
+  
     <button onclick="addProduto('Shampoo Automotivo 1L',13)">Adicionar</button>
   </div>
   <div class="linha">
